kubernetes/apps/databases/kv-store/redis/app/netpol.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: redis
spec:
  description: "Network policy for Redis"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: redis
  ingress:
    # Allow same namespace traffic
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: db
    # Allow connections from app namespaces
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: home-system
        - matchLabels:
            io.kubernetes.pod.namespace: dev-system
        - matchLabels:
            io.kubernetes.pod.namespace: observability
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
    # Allow prometheus scraping
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: observability
      toPorts:
        - ports:
            - port: "9121"
              protocol: TCP
  egress:
    # Allow same namespace traffic
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: db
    # Allow kube-apiserver access
    - toEntities:
        - kube-apiserver
    # Allow DNS
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
    # Allow Vault access for secrets
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: vault
      toPorts:
        - ports:
            - port: "8200"
              protocol: TCP
